--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <div class="header">
+            <div class="logo"><a href="#">
+                <h2>analog<br>people</h2></a></div>
+        <div class="nav">
+            <div class="nav-r"><a style="padding:10px;">Projects</a>
+                <a style="padding:10px;">Instagram</a>
+                <a style="padding:10px;">Say hey</a></div>
+          
+            </div>
+            <!--
     <section class="page-header">
       <h1 class="project-name">Analogpeople.GitHub.io</h1>
       <h2 class="project-tagline">Think Hack Code</h2>
     </section>
+    -->
 
     <section class="main-content">
       <p>Analog People</p>
