--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
+    <link href="grid.css" rel="stylesheet">
+    <link href="font.css" rel="stylesheet">
+    <link href="header.css" rel="stylesheet">
+    <link href="buttons.css" rel="stylesheet">
+    <link href="animation.css" rel="stylesheet">
+    <link href="menu.css" rel="stylesheet">
+    <link href="font-awesome-4.3-2.0/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
