--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <meta name="Ya-sin Chahimi" content="">
         <link rel="icon" type="image/png" href="ysc2.png" />
         <!--Styles-->
-        <link href="main.css" rel="stylesheet">
-        <link href="grid.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">
-        <link href="header.css" rel="stylesheet">
-        <link href="buttons.css" rel="stylesheet">
-        <link href="animation.css" rel="stylesheet">
-        <link href="menu.css" rel="stylesheet">
-        <link href="font-awesome-4.3-2.0/css/font-awesome.css" rel="stylesheet">
+        <link href="/stylesheets/main.css" rel="stylesheet">
+        <link href="/stylesheets/grid.css" rel="stylesheet">
+        <link href="/stylesheets/font.css" rel="stylesheet">
+        <link href="/stylesheets/header.css" rel="stylesheet">
+        <link href="/stylesheets/buttons.css" rel="stylesheet">
+        <link href="/stylesheets/animation.css" rel="stylesheet">
+        <link href="/stylesheets/menu.css" rel="stylesheet">
+        <link href="/stylesheets/font-awesome-4.3-2.0/css/font-awesome.css" rel="stylesheet">
     </head>
     <body>
         
